# voxide

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
.cache/clangd/index/: main.cpp.4B21EBA60012F8D3.idx  window.cpp.F7D2CB5128F18932.idx  window.hpp.1F886692A63C94D5.idx
assets/shader/: fragment.glsl  vertex.glsl
include/: camera.hpp  chunk.hpp  chunk_mesh.hpp  engine.hpp  game.hpp  main.hpp  shader_program.hpp  window.hpp
include/glad/: glad.h
src/: camera.cpp  chunk.cpp  chunk_mesh.cpp  engine.cpp  game.cpp  glad.c  main.cpp  shader_program.cpp  window.cpp
